--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+
     "extends": [
         "eslint:recommended",
         "plugin:import/errors",
@@ -7,10 +8,14 @@
         "prettier",
         "prettier/react"
     ],
+
     "rules": {
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "jsx-a11y/label-has-for": 0,
+        "no-console": 1
     },
     "plugins": ["react", "import", "jsx-a11y"],
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
