--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "Esteban",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -23,6 +27,7 @@
     "prettier": "^1.14.3"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "petfinder-client": "0.0.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
