--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "fem",
-  "version": "1.0.0",
-  "description": "front end masters react",
-  "main": "index.js",
-  "scripts": {
-    "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
-    "lint": "eslint \"**/*.{js,jsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html"
-  },
-  "author": "Esteban",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "parcel-bundler": "^1.10.3",
-    "prettier": "^1.14.3"
-  },
-  "dependencies": {
-    "@reach/router": "^1.2.1",
-    "petfinder-client": "0.0.3",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
-  }
+	"name": "fem",
+	"version": "1.0.0",
+	"description": "front end masters react",
+	"main": "index.js",
+	"scripts": {
+		"format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
+		"lint": "eslint \"**/*.{js,jsx}\"",
+		"test": "jest --silent",
+		"test:update": "jest --silent -u",
+		"test:watch": "jest --silent --watch",
+		"test:coverage": "jest --silent --coverage",
+		"dev": "parcel src/index.html"
+	},
+	"author": "Esteban",
+	"license": "MIT",
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-eslint": "^10.0.1",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react": "^6.24.1",
+		"eslint": "^5.8.0",
+		"eslint-config-prettier": "^3.1.0",
+		"eslint-plugin-import": "^2.14.0",
+		"eslint-plugin-jsx-a11y": "^6.1.2",
+		"eslint-plugin-prettier": "^3.0.0",
+		"eslint-plugin-react": "^7.11.1",
+		"jest": "^23.6.0",
+		"parcel-bundler": "^1.10.3",
+		"prettier": "^1.14.3",
+		"react-test-renderer": "^16.6.3"
+	},
+	"dependencies": {
+		"@reach/router": "^1.2.1",
+		"emotion": "^9.2.12",
+		"petfinder-client": "0.0.3",
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
+		"react-emotion": "^9.2.12"
+	}
 }
