--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"petfinder-client": "0.0.3",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
-		"react-emotion": "^9.2.12"
+		"react-emotion": "^9.2.12",
+		"react-loadable": "^5.5.0"
 	}
 }
