--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
 		"react-emotion": "^9.2.12",
-		"react-loadable": "^5.5.0"
+		"react-loadable": "^5.5.0",
+		"react-redux": "^5.1.1",
+		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0"
 	}
 }
