--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
 		"test:update": "jest --silent -u",
 		"test:watch": "jest --silent --watch",
 		"test:coverage": "jest --silent --coverage",
-		"dev": "parcel src/index.html"
+		"dev": "parcel src/index.html",
+		"build": "parcel build --public-url ./dist/ src/index.html",
+		"start": "npm -s run build && babel-node ./server.js"
 	},
 	"author": "Esteban",
 	"license": "MIT",
 	"devDependencies": {
 		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.0.1",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-object-assign": "^6.22.0",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
+		"babel-preset-node6": "^11.0.0",
 		"babel-preset-react": "^6.24.1",
 		"eslint": "^5.8.0",
 		"eslint-config-prettier": "^3.1.0",
@@ -33,7 +39,9 @@
 	},
 	"dependencies": {
 		"@reach/router": "^1.2.1",
+		"babel-cli": "^6.26.0",
 		"emotion": "^9.2.12",
+		"express": "^4.16.4",
 		"petfinder-client": "0.0.3",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
