Typescript with React

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
-		"lint": "eslint \"**/*.{js,jsx}\"",
+		"lint": "tslint --project .",
 		"test": "jest --silent",
 		"test:update": "jest --silent -u",
 		"test:watch": "jest --silent --watch",
@@ -17,8 +17,10 @@
 	"author": "Esteban",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/reach__router": "^1.2.2",
+		"@types/react": "^16.7.8",
+		"@types/react-dom": "^16.0.11",
 		"babel-core": "^6.26.3",
-		"babel-eslint": "^10.0.1",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-object-assign": "^6.22.0",
@@ -26,16 +28,12 @@
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-node6": "^11.0.0",
 		"babel-preset-react": "^6.24.1",
-		"eslint": "^5.8.0",
-		"eslint-config-prettier": "^3.1.0",
-		"eslint-plugin-import": "^2.14.0",
-		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-prettier": "^3.0.0",
-		"eslint-plugin-react": "^7.11.1",
 		"jest": "^23.6.0",
 		"parcel-bundler": "^1.10.3",
 		"prettier": "^1.14.3",
-		"react-test-renderer": "^16.6.3"
+		"react-test-renderer": "^16.6.3",
+		"typescript": "^3.1.6"
 	},
 	"dependencies": {
 		"@reach/router": "^1.2.1",
